CIV-2221-enable highLevelDataSetup